# nxstacker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: deploy_image.yml  lint.yml  run_tests.yml
src/nxstacker/: tomojoin.py
src/nxstacker/experiment/: ptychotomo.py  tomoexpt.py  xrftomo.py
src/nxstacker/facility/: __init__.py  facility.py  i08_1.py  i13_1.py  i14.py
src/nxstacker/facility/specs/: common.yaml  i08-1.yaml  i13-1.yaml  i14.yaml
src/nxstacker/io/: projection.py
src/nxstacker/io/nxtomo/: metadata.py  minimal.py
src/nxstacker/io/ptycho/: ptypy.py  ptyrex.py
src/nxstacker/io/xrf/: python_processing.py
src/nxstacker/parser/: parser.py  proj_identifier.py
src/nxstacker/utils/: experiment.py  facility.py  io.py  logger.py  model.py  parse.py  ptychography.py  resource.py
src/tests/dls_fs/: __init__.py  test_i08_1_ptychotomo.py  test_i13_1_ptychotomo.py  test_i14_ptychotomo.py  test_i14_xrftomo.py
src/tests/fake_fs/: prepare_facility.py  prepare_proj_file.py  test_i08_1_ptychotomo.py  test_i08_1_ptychotomo_ptyd.py  test_i13_1_ptychotomo.py  test_i14_ptychotomo.py  test_i14_xrftomo.py
src/tests/utils/: test_io.py  test_parse.py  test_resource.py
src/tomojoin/experiment/: ptychotomo.py  tomoexpt.py
src/tomojoin/facility/: __init__.py  facility.py  i08_1.py  i13_1.py  i14.py
src/tomojoin/facility/specs/: i14.yaml
src/tomojoin/io/nxtomo/: minimal.py
src/tomojoin/io/ptycho/: ptypy.py  ptyrex.py
src/tomojoin/parser/: proj_identifier.py
src/tomojoin/utils/: parse.py
