[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tomojoin"
version = "2024.05"
dependencies = [
  "h5py",
  "hdf5plugin",
  "numpy",
]
requires-python = " >=3.10 "
description = "An utility to produce NXtomo file from various tomography experiment"
readme = "README.md"
authors = [
  { name = "Timothy Poon", email = "timothy.poon@diamond.ac.uk" },
]
maintainers = [
  { name = "Timothy Poon", email = "timothy.poon@diamond.ac.uk" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = ""

[tool.setuptools.package-data]
"tomojoin.facility.specs" = ["*.yaml"]
