[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nxstacker"
version = "2024.5b2"
dependencies = [
  "h5py",
  "hdf5plugin",
  "numpy",
  "scikit-image",
  "xraylib",
]
requires-python = " >=3.10 "
description = "An utility to produce NeXus-compliance file from a stack"
readme = "README.md"
authors = [
  { name = "Timothy Poon", email = "timothy.poon@diamond.ac.uk" },
]
maintainers = [
  { name = "Timothy Poon", email = "timothy.poon@diamond.ac.uk" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "coming soon"

[project.scripts]
"tomojoin" = "nxstacker.tomojoin:tomojoin_entry"

[tool.setuptools.package-data]
"nxstacker.facility.specs" = ["*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
